<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!--
Copyright (c) 2019, The MITRE Corporation
All rights reserved.

Sections of this project contains content developed by The MITRE Corporation.
If this code is used in a deployment or embedded within another project,
it is requested that you send an email to opensource@mitre.org in order to
let us know where this software is being used.
-->

<package format="3">
  <name>kvh_geo_fog_3d_driver</name>
  <version>1.5.1</version>
  <description>A ROS driver for the KVH Geo Fog 3D INS family of systems.</description>
  <maintainer email="zlacelle@mitre.org">Zach LaCelle</maintainer>
  <license>Apache 2.0</license>
  <author email="tbostic@mitre.org">Trevor Bostic</author>
  <author email="zlacelle@mitre.org">Zach LaCelle</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>kvh_geo_fog_3d_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>diagnostic_msgs</depend>
  <!--<depend>dynamic_reconfigure</depend>-->
  

  <build_depend>diagnostic_updater</build_depend>
  <build_export_depend>diagnostic_updater</build_export_depend>
  

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!--<rosdoc external="http://www.kvh.com/admin/products/gyros-imus-inss/ins/geo-fog-3d-dual/commercial-geo-fog-3d-dual/"/>-->
  </export>
</package>
