<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!--
Copyright (c) 2019, The MITRE Corporation
All rights reserved.

Sections of this project contains content developed by The MITRE Corporation.
If this code is used in a deployment or embedded within another project,
it is requested that you send an email to opensource@mitre.org in order to
let us know where this software is being used.
-->

<package format="3">
  <name>kvh_geo_fog_3d_msgs</name>
  <version>1.5.1</version>
  <description>kvh_geo_fog_3d_msgs contains raw messages for the KVH GEO FOG 3D INS devices.</description>
  <maintainer email="tbostic@mitre.org">Trevor Bostic</maintainer>
  <maintainer email="zlacelle@mitre.org">Zach LaCelle</maintainer>
  <license>Apache 2.0</license>
  <author email="tbostic@mitre.org">Trevor Bostic</author>
  <author email="zlacelle@mitre.org">Zach LaCelle</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!--<rosdoc external="http://www.kvh.com/admin/products/gyros-imus-inss/ins/geo-fog-3d-dual/commercial-geo-fog-3d-dual/"/>-->
  </export>
</package>
