<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!--
Copyright (c) 2019, The MITRE Corporation
All rights reserved.

Sections of this project contains content developed by The MITRE Corporation.
If this code is used in a deployment or embedded within another project,
it is requested that you send an email to opensource@mitre.org in order to
let us know where this software is being used.
-->

<package format="3">
  <name>kvh_geo_fog_3d_rviz</name>
  <version>1.5.1</version>
  <description>The KVH GEO FOG 3D rviz plugin package</description>
  <author email="zlacelle@mitre.org">Zach LaCelle</author>
  <maintainer email="zlacelle@mitre.org">Zach LaCelle</maintainer>
  <license>Apache 2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>diagnostic_msgs</depend>
  <depend>kvh_geo_fog_3d_msgs</depend>
  <depend>pluginlib</depend>
  <build_depend>libqt5-svg-dev</build_depend>
  <build_depend>libqt5multimedia5-plugins</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qtdeclarative5-dev</build_depend>
  <build_depend>qtmultimedia5-dev</build_depend>
  <depend>rviz2</depend>
  <depend>rviz_common</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml" />
  </export>
</package>



